--- a/footer.css
+++ b/footer.css
@@ -2,6 +2,11 @@
   margin: 0;
   padding: 0;
 }
+
+.right_row
+{
+  margin-right: 8%;
+}
 footer {
   background: rgb(110, 109, 109);
   display: flex;
@@ -10,13 +15,13 @@ footer {
 .box1
 {
   width: 100%;
-  margin-top: 10%;
   display: flex;
 }
 img {
  
  width: 10%;
- padding: 05%;
+ padding: 5%;
+ max-width: 8%;
 }
 .top{
     display: flex;
@@ -25,22 +30,24 @@ img {
 
 .size {
   width: 100%;
- 
   margin: 4%;
   margin-top: 2%;
 }
 .left_row {
   list-style: none;
-  width: 150%; 
+  width: 150%;
+  margin-left: 8%;
  
 }
 p,h1 , ul , li 
 {
-    margin: 2%;
+    margin-top: 6%;
     color: aquamarine;
 }
 .middle_row ul li {
-  list-style: decimal;margin-top: 2%;
+  list-style: decimal;
+  margin-left: 15%;
+
 }
 
 .right_row ul li {
@@ -53,12 +60,14 @@ p,h1 , ul , li
 .bottom_fotter{
    display: flex;
    justify-content: space-between;
-
    background: rgb(110, 109, 109);
-  
+  color: aqua;
    
+}
+p1{
+  padding-left:7% ;
+  padding-right: 7%;
 }
 .bottom_fotter hr {
     border: 2px solid white ;
 }
-
