--- a/footer.css
+++ b/footer.css
@@ -1,46 +1,55 @@
-* , body {
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600&family=Nunito:wght@300;400;500;600&family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300&display=swap');
+
+
+*,
+body {
   margin: 0;
   padding: 0;
+  font-family: 'Numito Sans', sans-serif;
+}
+
+.right_row {
+  margin-right: 8%;
 }
 footer {
   background: rgb(110, 109, 109);
   display: flex;
   flex-direction: column;
 }
-.box1
-{
+.box1 {
   width: 100%;
-  margin-top: 10%;
   display: flex;
 }
 img {
- 
- width: 10%;
- padding: 05%;
+  width: 10%;
+  padding: 5%;
+  max-width: 8%;
 }
-.top{
-    display: flex;
-   
+.top {
+  display: flex;
 }
 
 .size {
   width: 100%;
- 
   margin: 4%;
   margin-top: 2%;
 }
 .left_row {
   list-style: none;
-  width: 150%; 
- 
+  width: 150%;
+  margin-left: 8%;
 }
-p,h1 , ul , li 
-{
-    margin: 2%;
-    color: aquamarine;
+p,
+h1,
+ul,
+li {
+  margin-top: 6%;
+  color: aquamarine;
 }
 .middle_row ul li {
-  list-style: decimal;margin-top: 2%;
+  list-style: decimal;
+  margin-left: 15%;
+  margin-top: 2%;
 }
 
 .right_row ul li {
@@ -48,17 +57,18 @@ p,h1 , ul , li
   margin-top: 2%;
 }
 
-
-
-.bottom_fotter{
-   display: flex;
-   justify-content: space-between;
-
-   background: rgb(110, 109, 109);
+.bottom_fotter {
+  display: flex;
+  justify-content: space-between;
+  background: rgb(110, 109, 109);
+  color: aqua;
+  margin: 1%;
+}
+p1 {
   
-   
+  padding-left: 7%;
+  padding-right: 7%;
 }
 .bottom_fotter hr {
-    border: 2px solid white ;
+  border: 2px solid white;
 }
-
